<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="hitam.epics.sahaya.RegistrationActivity">

    <LinearLayout
        android:id="@+id/registration_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sahaya_logo" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Please Wait"
            android:textAlignment="center" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:transitionName="logo"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    style="@style/TextAppearance.AppCompat.SearchResult.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SAHAYA"
                    android:textAlignment="center"
                    android:textSize="40sp" />
            </LinearLayout>


            <EditText
                android:id="@+id/registration_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName|textCapWords" />

            <EditText
                android:id="@+id/registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registration_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registration_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/registration_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/occupation"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/registration_referral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/referral_code"
                android:inputType="text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_rectangle"
                android:onClick="register"
                android:text="@string/register" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
