<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image2"
    tools:context="hitam.epics.sahaya.volunteer.AddNoteActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/notes_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3d050500">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/notes"
            android:textColor="#fff" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/notes_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notes_title"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_rectangle_lower_curve"
            android:gravity="top"
            android:hint="@string/type_your_note_here"
            android:lines="10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:onClick="cancel"
                android:text="@string/cancel" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="sendNote"
                android:text="@string/send" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_light"
            android:onClick="sendNoteWithPicture"
            android:text="@string/send_with_picture" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/notes_title"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</RelativeLayout>
