<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hitam.epics.sahaya.DiscussionActivity">

    <TextView
        android:id="@+id/discussion_title"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:drawableEnd="@android:drawable/ic_dialog_info"
        android:elevation="10dp"
        android:onClick="showCenterDetail"
        android:padding="10dp"
        android:text="@string/discussion_forum"
        android:textAlignment="center"
        android:textColor="#fff"
        tools:targetApi="lollipop" />

    <RelativeLayout
        android:id="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/send_message_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/send_button"
            android:onClick="SendMessage"
            android:scaleType="fitCenter"
            android:src="@drawable/send_button" />

        <EditText
            android:id="@+id/message_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/send_message_button"
            android:background="@drawable/perfect_rectangle"
            android:hint="@string/enter_your_message_here"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:maxHeight="100dp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/message_layout"

        android:layout_below="@id/discussion_title"
        android:background="@drawable/discussion_background">

        <ListView
            android:id="@+id/discussion_message_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="10dp"
            android:listSelector="@android:color/transparent"
            android:padding="10dp"
            android:transcriptMode="alwaysScroll"
            tools:listitem="@layout/discussion_message" />
    </FrameLayout>

    <TextView
        android:id="@+id/empty_view"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/message_layout"
        android:gravity="center"
        android:text="@string/no_messages" />

</RelativeLayout>
